<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imc_ros_bridge</name>
  <version>0.0.0</version>
  <description>imc_ros_bridge for translating between imc and ros2</description>
  <maintainer email="nrol@kth.se">niklas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>smarc_msgs</depend>

    <!-- Message gen depends -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
